# QT7_8

./: CMakeLists.txt  mainwindow.cpp  udpworker.cpp
